--- a/templates/link.html
+++ b/templates/link.html
@@ -6,13 +6,12 @@
 
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-<link type="text/css" rel="stylesheet" href="/raPlus/dependencies/materialize.min.css">
+<link type="text/css" rel="stylesheet" href="../../static/css/materialize.min.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<script type="text/javascript" src="/raPlus/dependencies/jquery.min.js"></script>
-<script type="text/javascript" src="/raPlus/dependencies/materialize.min.js"></script>
-<script type="text/javascript" src="/raPlus/static/js/directory.js"></script>
-
+<script type="text/javascript" src="../../static/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../static/js/materialize.min.js"></script>
+<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
