--- a/templates/nav.html
+++ b/templates/nav.html
@@ -20,18 +20,18 @@
     .container {
         margin: 0 auto;
         max-width: 1280px;
-        width: 85%;
+        width: 80%;
+        padding-right: 0px !important;
     }
     
     @media only screen and (min-width: 601px) {
         .container {
-            width: 85%;
+            width: 75%;
         }
     }
     
     @media only screen and (min-width: 993px) {
         .container {
-            width: 90%;
         }
         a.button-collapse {
             display: none;
@@ -39,9 +39,6 @@
     }
 </style>
 
-<nav class="N/A transparent">
-   
-</nav>
 
 <ul id="slide-out" class="side-nav fixed">
     <li>
