paw icon for map

--- a/templates/main.html
+++ b/templates/main.html
@@ -76,6 +76,7 @@
                           lat: parseFloat(lat),
                           lng: parseFloat(long)
                       },
+                      icon: '../static/images/map-paw.png',
                       map: map
                   });
                   markers.push(marker); //push back into markers array
