--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,9 @@ body, html {
     height: 100%;
     margin: 0;
 }
+.container{
+    width: 85% !important;
+}
 
 .bg {
     background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.7) ), url("../images/land.jpeg");
@@ -20,5 +23,5 @@ body, html {
 	line-height: 20px !important;
 }
 .card{
-	height: 350px;
+	height: 380px;
 }
