--- a/templates/main.html
+++ b/templates/main.html
@@ -9,28 +9,28 @@
   <style>
       #map {
         height: 450px;
-        width: 117%;
+        width: 100%;
        }
     </style>
 </head>
 <body>
+    <div id="map"></div>
     <div class="container">
-      <div id="map"></div>
-      <div id="pet-parks" class="row col s12" style="padding-left: 10%; overflow-x: auto;">
+      
+      <div id="pet-parks" class="row col s12" overflow-x: auto;">
         
         <h5 class="center">Parks in the area</h5>
-
         {% for park in parks %}
-          <div class="col s4">
+          <div class="col s3">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{{park.picture}}" width="280" height="140">
+                <img class="activator" src="{{park.picture}}" width="100%" height="auto">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">
                   {{park.name}}<i class="material-icons right">more_vert</i>
                 </span>
-                <p>{{park.address}}</p>
+                <address>{{park.address}}</address>
                 <br/>
                 {% for r in range(park.rating|int) %}
                   <i class="material-icons #c62828 red-text text-darken-2">favorite</i>
