--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,9 +3,10 @@
         <a href="/main" class="brand-logo" style="padding-top: 10px;"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Purina-logo.svg/2000px-Purina-logo.svg.png" width="200" height="auto"></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/main">Home</a></li>
-            <li><a href="/social">Social</a></li>
             <li><a href="/adopt">Adopt</a></li>
+            <li><a href="/social">Social</a></li>
             <li><a href="/lost-pet">Lost pets</a></li>
+            <li><a href="/login">Logout</a></li>
         </ul>
     </div>
 </nav>
