--- a/templates/adopt.html
+++ b/templates/adopt.html
@@ -20,7 +20,120 @@
                     <i class="material-icons">close</i>
                 </div>
             </form>
+      </div>
+
+      <div class="show-more">
+          <a href="#">Advanced Search</a>
+      </div>
+
+      <div class="filter hide">
+        <div class="row">
+          <div class="input-field col s4">
+            <select name="pet_type" id='pet_type'>
+              <option value="Any">Any</option>
+              <option value="Dog">Dog</option>
+              <option value="Cat">Cat</option>
+            </select>
+            <label>Pet Type</label>
+          </div>
+
+          <div class="input-field col s4 hide dog_type">
+            <select name="dog_type" id='dog_type'>
+              <option value="Any">Any</option>
+              <option value="Schnauzer">Schnauzer</option>
+              <option value="Shih-Txu">Shih Txu</option>
+              <option value="Poodle">Poodle</option>
+              <option value="Golden-Retriever">Golden Retriever</option>
+              <option value="Yorkie">Yorkie</option>
+              <option value="Pitbull">Pitbull</option>
+              <option value="Husky">Husky</option>
+              <option value="Beagle">Beagle</option>
+              <option value="Boxer">Boxer</option>
+              <option value="Hound">Hound</option>
+            </select>
+            <label>Breed</label>
+          </div>
+
+          <div class="input-field col s4">
+            <select name="age_group" id='age_group'>
+              <option value="Any">Any</option>
+              <option value="Baby">Baby</option>
+              <option value="Young">Young</option>
+              <option value="Adult">Adult</option>
+              <option value="Senior">Senior</option>
+            </select>
+            <label>Age</label>
+          </div>
+
+          <div class="input-field col s4">
+            <select name="pet_size" id='pet_size'>
+              <option value="Any">Any</option>
+              <option value="Small">Small</option>
+              <option value="Medium">Medium</option>
+              <option value="Large">Large</option>
+              <option value="X-Large">Extra Large</option>
+            </select>
+            <label>Size</label>
+          </div>
+
+          <div class="input-field col s4">
+            <select name="pet_color" id='pet_color'>
+              <option value="Any">Any</option>
+              <option value="Golden">Golden</option>
+              <option value="Black">Black</option>
+              <option value="Tan">Tan</option>
+              <option value="White">White</option>
+              <option value="Silver">Silver</option>
+            </select>
+            <label>Color</label>
+          </div>
+
         </div>
+      </div>
+
+      <div class="doggie" id="doggie" style="padding-top: 15px">
+        <div class="row">
+          
+          {% for pet in pets %}
+          <div class="col s3">
+            <div class="card" style="height: 200px">
+              <div class="card-image">
+                <a href="#"><img src="../static/images/{{pet.picture}}" height="200" width="150"></a>
+                <span class="card-title" style="background-color: #424245; height: 50px; padding-top: 15px;">{{pet.name}}</span>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+
+        </div>
+      </div>
+
     </div>
 </body>
+<script type="text/javascript">
+$(document).ready(function() {
+  $('select').material_select();
+
+  $("#pet_type").on("change", function() {
+    var e = document.getElementById("pet_type");
+    var value = e.options[e.selectedIndex].value;
+    if(value === "Dog") {
+      $(".dog_type").removeClass("hide");
+    }
+    else{
+      $(".dog_type").addClass("hide");
+    }
+  });
+
+  $(".show-more a").on("click", function () {
+      if ($('.show-more a').text() === "Advanced Search") {
+          $(".filter").removeClass("hide");
+          $('.show-more a').text('Show Less');
+      } else {
+          $(".filter").addClass("hide");
+          $('.show-more a').text('Advanced Search');
+      }
+  });
+});
+</script>
 </html>
