pet profile setup

--- a/templates/adopt.html
+++ b/templates/adopt.html
@@ -98,7 +98,7 @@
           <div class="col s3">
             <div class="card" style="height: 200px">
               <div class="card-image">
-                <a href="#"><img src="../static/images/{{pet.picture}}" height="200" width="150"></a>
+                <a href="/pet/{{pet.name}}"><img src="../static/images/{{pet.picture}}" height="200" width="150"></a>
                 <span class="card-title" style="background-color: #424245; height: 50px; padding-top: 15px;">{{pet.name}}</span>
               </div>
             </div>
