--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,9 @@
 
 <body>
     <div class="valign-wrapper row login-box">
-        <div class="col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4">
+        <div class="col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4" style="height: 500px">
             <!-- <form method="post" action="/post_login"> -->
-            <form action="/post_login" method="post">
+            <form action="/main" >
                 <div class="card-content">
                     <img src="../../static/images/paw.png" height="100px" width="150px">
                     <span class="card-title">Login</span>
