--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,9 @@
     <div class="bg">
       <div class="center home">
         <h2>Better with Pets!</h2>
+        <a class="btn waves-effect waves-light blue darken-3" href="/main">Browse</a>
+        <br/>
+        <br/>
         <a class="btn waves-effect waves-light blue darken-3" href="/signup">Signup</a>
         <a class="btn waves-effect waves-light blue darken-3" href="/login">Login</a>
       </div>
