--- a/templates/pet.html
+++ b/templates/pet.html
@@ -44,16 +44,18 @@
 		border-width: 0px .5px 0px 0px;*/
 	}
 	.pet-pic-item {
-		width: 20px;
-		height: 20px;
-		background-image: url('../static/images/map-paw.png');
+		width: 45px;
+		height: 45px;
+		background-image: url('../static/images/like.png');
 		position: relative;
 		top: -50px;
    		left: 210px;
 	}
 	.label {
 		position: relative;
-		top: 20px;
+		top: 12px;
+		left: 11px;
+		color: black;
 	}
 
 
@@ -77,7 +79,7 @@
 					<div class="col s3 pet-ind">
 						<img class="materialboxed pet-pic" data-caption="{{pic.caption}}" src="{{pic.picture}}">
 							<div class="pet-pic-item" id="pet-pic-item">
-								<span class="label">{{pic.likes}}</span>
+								<a href="#"> <span class="label">{{pic.likes}}</span></a>
 							</div>
 						<p>{{pic.caption}}</p>
 					</div>
