--- a/templates/pet.html
+++ b/templates/pet.html
@@ -39,9 +39,6 @@
 	}
 	.pet-ind{
 		height: 300px;
-		/*border-color: #616161;
-		border-style: solid;
-		border-width: 0px .5px 0px 0px;*/
 	}
 	.pet-pic-item {
 		width: 45px;
@@ -56,6 +53,9 @@
 		top: 12px;
 		left: 11px;
 		color: black;
+	}
+	.facts {
+		padding-right: 5%;
 	}
 
 
@@ -78,25 +78,42 @@
 				{% for pic in pics %}
 					<div class="col s3 pet-ind">
 						<img class="materialboxed pet-pic" data-caption="{{pic.caption}}" src="{{pic.picture}}">
-							<div class="pet-pic-item" id="pet-pic-item">
-								<a href="#"> <span class="label">{{pic.likes}}</span></a>
+							<div class="pet-pic-item" id="pet-pic-item-{{pic.id}}">
+								<a href="#" onclick="updateLikes({{pic.id}}); return false;"><span class="label" id="pet-pic-likes-{{pic.id}}">{{pic.likes}}</span></a>
 							</div>
 						<p>{{pic.caption}}</p>
 					</div>
 				{% endfor %}
 			</div>
 			<div id="about" class="col s12 pet">
-				{{pet.description}}
-
-				<h5>Fun Facts:</h5>
-				<p><strong>Nickname:</strong> {{pet.name}}</p>
-				<p><strong>Location:</strong> {{pet.location}}</p>
-				<p><strong>Size:</strong> {{pet.size}}</p>
-				<p><strong>Breed:</strong> {{pet.breed}}</p>
-				<p><strong>Color:</strong> {{pet.color}}</p>
+				<span class="facts"><strong>Nickname:</strong> {{pet.name}}</span>
+				<span class="facts"><strong>Location:</strong> {{pet.location}}</span>
+				<span class="facts"><strong>Size:</strong> {{pet.size}}</span>
+				<span class="facts"><strong>Breed:</strong> {{pet.breed}}</span>
+				<span class="facts"><strong>Color:</strong> {{pet.color}}</span>
+				<p>{{pet.description}}</p>
 			</div>
 	      </div>
 	  </div>
     </div>
 </body>
+<script type="text/javascript">
+	function updateLikes(id){
+		var curr_likes = parseInt($("#pet-pic-likes-"+id).text()) + 1;
+		$("#pet-pic-likes-"+id).text(curr_likes);
+
+		$.ajax({
+            url: '/updatePicLikes/' + curr_likes,
+            type: 'POST',
+            success: function(response) {
+                console.log(response);
+            },
+            error: function(error) {
+                console.log(error);
+            }
+        });
+
+	}
+
+</script>
 </html>
