--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,7 +6,7 @@
             <li><a href="/adopt">Adopt</a></li>
             <li><a href="/social">Social</a></li>
             <li><a href="/lost-pet">Lost pets</a></li>
-            <li><a href="/">Logout</a></li>
+            <!-- <li><a href="/">Logout</a></li> -->
         </ul>
     </div>
 </nav>
