--- a/templates/admin-nav.html
+++ b/templates/admin-nav.html
@@ -2,11 +2,8 @@
     <div class="nav-wrapper">
         <a href="/main" class="brand-logo" style="padding-top: 10px;"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Purina-logo.svg/2000px-Purina-logo.svg.png" width="200" height="auto"></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/main">Home</a></li>
-            <li><a href="/adopt">Adopt</a></li>
-            <!-- <li><a href="/social">Pets to Door</a></li> -->
-            <!-- <li><a href="/lost-pet">Lost pets</a></li> -->
-            <li><a href="/login">Admin</a></li>
+            <li><a href="/admin-main">Proposals</a></li>
+            <li><a href="/">Logout</a></li>
         </ul>
     </div>
 </nav>
