--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     <div class="valign-wrapper row login-box">
         <div class="col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4" style="height: 500px">
             <!-- <form method="post" action="/post_login"> -->
-            <form action="/main" >
+            <form action="/admin-main" >
                 <div class="card-content">
                     <img src="../../static/images/paw.png" height="100px" width="150px">
                     <span class="card-title">Login</span>
