fixed post proposal bug

--- a/templates/pet.html
+++ b/templates/pet.html
@@ -151,10 +151,10 @@
 		                    	</div>
 		                    </div>
 		                    <div class="input-field col s12 hide">
-	                            <input id="pet_name" name="pet_name" type="text" class="validate" value="{{pet.name}}" disabled>
-	                            <input id="pet_color" name="pet_color" type="text" class="validate" value="{{pet.color}}" disabled>
-	                            <input id="pet_age" name="pet_age" type="text" class="validate" value="{{pet.age}}" disabled>
-	                            <input id="pet_picture" name="pet_picture" type="text" class="validate" value="{{pet.picture}}" disabled>
+	                            <input id="pet_name" name="pet_name" type="text" class="validate" value="{{pet.name}}" >
+	                            <input id="pet_color" name="pet_color" type="text" class="validate" value="{{pet.color}}" >
+	                            <input id="pet_age" name="pet_age" type="text" class="validate" value="{{pet.age}}" >
+	                            <input id="pet_picture" name="pet_picture" type="text" class="validate" value="{{pet.picture}}" >
 	                        </div>
 
 		                <div class="card-action right-align">
