admin view fixed

--- a/templates/admin-main.html
+++ b/templates/admin-main.html
@@ -5,10 +5,158 @@
   <title>BWP Hack Social</title>
   {% include 'admin-nav.html' %}
 
+  <style type="text/css">
+  	.title{
+  		font-size: 15px;
+  		font-weight: 600;
+  	}
+  	.a-row{
+  		margin-bottom: 0px;
+  	}
+  	.custom-btn{
+  		height: 15px;
+  		width: 150px;
+  		line-height: 15px;
+  		font-size: 12px;
+  	}
+  </style>
 </head>
 <body>
     <div class="container">
-      ljk
+    	<h5>Manage submitted adoption proposals</h5>
+		<ul class="tabs center">
+			<li class="tab col s3"><a class="active" href="#new_proposals">New Proposals</a></li>
+			<li class="tab col s3"><a href="#recent_proposals">Recent Proposals</a></li>
+		</ul>
+		<div id="new_proposals" class="col s12">
+			{% for proposal in new_proposals %}
+				<ul class="collapsible" data-collapsible="accordion">
+					<li>
+						<div class="collapsible-header">
+							<div class="row a-row">
+								<div class="col s4"><span class="title">Name:</span> {{proposal.first_name}} {{proposal.last_name}}</div>
+								<div class="col s4"><span class="title">Email:</span> {{proposal.email}}</div>
+								<div class="col s4 right-align"><span class="title">Pet Interest:</span> {{proposal.pet_name}}</div>	
+							</div>
+						</div>
+						<div class="collapsible-body">
+							<div class="col s12 row a-row">
+								<div class="col s3">
+									<img src="../static/images{{proposal.pet_picture}}" width="50%" height="auto">
+									<br>
+									<span class="title">Name: </span>{{proposal.pet_name}}<br>
+									<span class="title">Age: </span>{{proposal.pet_age}}<br>
+									<span class="title">Color: </span>{{proposal.pet_color}}<br>
+									<a class="waves-effect waves-light btn green custom-btn" id="approve_proposal" onclick="updateStatus({{proposal.id}}, 'recent')">Approve</a>
+									<a class="waves-effect waves-light btn red custom-btn" id="delete_proposal" onclick="updateStatus({{proposal.id}}, 'delete')">Delete</a>
+
+								</div>
+								<div class="col s9">
+									<span class="title">Contact Number: </span>{{proposal.phone}}<br>
+									<div class="row a-row">
+										<div class="col s4"><span class="title">First time adopting: </span>{{proposal.first_time_adopt}}</div>
+										<div class="col s4"><span class="title">Previous pet owner: </span>{{proposal.previous_owner}}</div>
+										<div class="col s4"><span class="title">Pet safe home: </span>{{proposal.pet_safe}}</div>
+									</div>
+									<div class="row a-row">
+										<div class="col s4"><span class="title">Other pets: </span>{{proposal.other_pets}}</div>
+										<div class="col s8"><span class="title">Other pet breeds: </span>{{proposal.other_pets_list}}</div>
+									</div>
+									<div class="row a-row">
+										<div class="col s12">
+											<span class=title>Why adopt {{proposal.pet_name}}:</span> {{proposal.why_adopt}}
+										</div>
+										<div class="col s12">
+											<span class=title>Additional notes:</span> {{proposal.notes}}
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			{% endfor %}
+		</div>
+		<div id="recent_proposals" class="col s12">
+			{% for proposal in recent_proposals %}
+				<ul class="collapsible" data-collapsible="accordion">
+					<li>
+						<div class="collapsible-header">
+							<div class="row a-row">
+								<div class="col s4"><span class="title">Name:</span> {{proposal.first_name}} {{proposal.last_name}}</div>
+								<div class="col s4"><span class="title">Email:</span> {{proposal.email}}</div>
+								<div class="col s4 right-align"><span class="title">Pet Interest:</span> {{proposal.pet_name}}</div>	
+							</div>
+						</div>
+						<div class="collapsible-body">
+							<div class="col s12 row a-row">
+								<div class="col s3">
+									<img src="../static/images{{proposal.pet_picture}}" width="50%" height="auto">
+									<br>
+									<span class="title">Name: </span>{{proposal.pet_name}}<br>
+									<span class="title">Age: </span>{{proposal.pet_age}}<br>
+									<span class="title">Color: </span>{{proposal.pet_color}}<br>
+									<a class="waves-effect waves-light btn red custom-btn" id="delete_proposal" onclick="updateStatus({{proposal.id}}, 'delete')">Delete</a>
+
+								</div>
+								<div class="col s9">
+									<span class="title">Contact Number: </span>{{proposal.phone}}<br>
+									<div class="row a-row">
+										<div class="col s4"><span class="title">First time adopting: </span>{{proposal.first_time_adopt}}</div>
+										<div class="col s4"><span class="title">Previous pet owner: </span>{{proposal.previous_owner}}</div>
+										<div class="col s4"><span class="title">Pet safe home: </span>{{proposal.pet_safe}}</div>
+									</div>
+									<div class="row a-row">
+										<div class="col s4"><span class="title">Other pets: </span>{{proposal.other_pets}}</div>
+										<div class="col s8"><span class="title">Other pet breeds: </span>{{proposal.other_pets_list}}</div>
+									</div>
+									<div class="row a-row">
+										<div class="col s12">
+											<span class=title>Why adopt {{proposal.pet_name}}:</span> {{proposal.why_adopt}}
+										</div>
+										<div class="col s12">
+											<span class=title>Additional notes:</span> {{proposal.notes}}
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			{% endfor %}
+		</div>
+
+      
+      
     </div>
 </body>
+<script type="text/javascript">
+	function updateStatus(id, status){
+		if(status === "recent") {
+			$.ajax({
+	            url: '/updateProposalStatus/' + String(id) + "/"+ String(status),
+	            type: 'POST',
+	            success: function(response) {
+	                console.log(response);
+	            },
+	            error: function(error) {
+	                console.log(error);
+	            },   
+	        });
+		}
+		else if(status == "delete") {
+			$.ajax({
+	            url: '/deleteProposal/' + String(id),
+	            type: 'POST',
+	            success: function(response) {
+	                console.log(response);
+	            },
+	            error: function(error) {
+	                console.log(error);
+	            },   
+	        });
+		}
+		
+	}
+</script>
 </html>
