--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,7 +5,7 @@
             <li><a href="/main">Home</a></li>
             <li><a href="/adopt">Adopt</a></li>
             <!-- <li><a href="/social">Pets to Door</a></li> -->
-            <!-- <li><a href="/lost-pet">Lost pets</a></li> -->
+            <li><a href="/lost-pet">Lost Pets</a></li>
             <li><a href="/login">Admin</a></li>
         </ul>
     </div>
