--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="valign-wrapper row login-box">
-        <div class="col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4">
+        <div class="col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4" style="height: 100%">
             <!-- <form method="post" action="/post_login"> -->
             <form method="post" action="/new_user">
                 <div class="card-content">
