--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,23 @@ body, html {
 	padding-top: 20%;
 	color: white;
 }
+#map {
+    height: 450px;
+    width: 100%;
+}
+#legend {
+    font-family: Arial, sans-serif;
+    background: #fff;
+    padding: 10px;
+    margin: 10px;
+    border: 3px solid #000;
+}
+#legend h3 {
+    margin-top: 0;
+}
+#legend img {
+    vertical-align: middle;
+}
 .card-title{
 	font-size: 20px !important;
 	line-height: 20px !important;
