--- a/templates/main.html
+++ b/templates/main.html
@@ -6,15 +6,10 @@
   {% include 'nav.html' %}
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <style>
-      #map {
-        height: 450px;
-        width: 100%;
-       }
-    </style>
 </head>
 <body>
     <div id="map"></div>
+    <div id="legend"><h5>Legend</h5></div>
     <div class="container">
       
       <div id="pet-parks" class="row col s12" overflow-x: auto;">
@@ -70,14 +65,27 @@
               success: function () {
                   lat = i{{park.id}}.responseJSON.results[0]["geometry"]["location"]["lat"];
                   long = i{{park.id}}.responseJSON.results[0]["geometry"]["location"]["lng"];
-                  var marker = new google.maps.Marker({
-                      position: {
-                          lat: parseFloat(lat),
-                          lng: parseFloat(long)
-                      },
-                      icon: '../static/images/map-paw.png',
-                      map: map
-                  });
+                  
+                  if( "{{park.type_of_park}}" === "Dog"){
+                    var marker = new google.maps.Marker({
+                        position: {
+                            lat: parseFloat(lat),
+                            lng: parseFloat(long)
+                        },
+                        icon: '../static/images/map-paw.png',
+                        map: map
+                    });
+                  } 
+                  else if ("{{park.type_of_park}}" === "Shelter"){
+                    var marker = new google.maps.Marker({
+                        position: {
+                            lat: parseFloat(lat),
+                            lng: parseFloat(long)
+                        },
+                        icon: '../static/images/shelter.png',
+                        map: map
+                    });
+                  } 
                   markers.push(marker); //push back into markers array
 
                   var contentString = '<h5>{{park.name}}</h5> <address>{{park.address}}</address> <p>Phone: {{park.phone}}</p><p>Description: {{park.description}}</p>';
@@ -96,6 +104,28 @@
               }
           });
         {% endfor %}
+
+        var legend = document.getElementById('legend');
+        var icons = [
+          {
+            "icon": "../static/images/map-paw.png",
+            "name": "Doggie Park"
+          },
+          {
+            "icon": "../static/images/shelter.png",
+            "name": "Animal Shelter"
+          }
+        ]
+        for (var key in icons) {
+          var type = icons[key];
+          var name = type.name;
+          var icon = type.icon;
+          var div = document.createElement('div');
+          div.innerHTML = '<img src="' + icon + '"> ' + name;
+          legend.appendChild(div);
+        }
+        map.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(legend);
+
         var markerCluster = new MarkerClusterer(map, markers,
             {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
     }
