--- a/templates/admin-main.html
+++ b/templates/admin-main.html
@@ -23,7 +23,15 @@
 </head>
 <body>
     <div class="container">
-    	<h5>Manage submitted adoption proposals</h5>
+    	<div class="row">
+            <form onsubmit="myFunction()">
+                <div class="input-field">
+                    <input id="proposal_search" type="search">
+                    <label class="label-icon" for="proposal_search"><i class="material-icons">search</i></label>
+                    <i class="material-icons">close</i>
+                </div>
+            </form>
+        </div>
 		<ul class="tabs center">
 			<li class="tab col s3"><a class="active" href="#new_proposals">New Proposals</a></li>
 			<li class="tab col s3"><a href="#recent_proposals">Recent Proposals</a></li>
