--- a/templates/pet.html
+++ b/templates/pet.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 <!-- 	<img src="https://static1.squarespace.com/static/52f5256ce4b039b51c0e643f/t/5821119ce3df285de6f31f4e/1478562205671/Pet-health-care-banner-1.jpg?format=1500w" class="pet-cover"> -->	
-		<img src="https://thumbs.dreamstime.com/t/french-bulldog-puppy-words-i-love-french-red-heart-white-background-72631476.jpg" class="pet-cover">
-
+<!-- 		<img src="https://thumbs.dreamstime.com/t/french-bulldog-puppy-words-i-love-french-red-heart-white-background-72631476.jpg" class="pet-cover">
+ -->
+ 	<img src="{{pet.banner}}" class="pet-cover">
     <div class="container">
       <img src="../static/images/{{pet.picture}}" class="pet-avi">
       <div class="pet-info">
