--- a/templates/home.html
+++ b/templates/home.html
@@ -14,10 +14,7 @@
       <div class="center home">
         <h2>Better with Pets!</h2>
         <a class="btn waves-effect waves-light blue darken-3" href="/main">Browse</a>
-        <br/>
-        <br/>
-        <a class="btn waves-effect waves-light blue darken-3" href="/signup">Signup</a>
-        <a class="btn waves-effect waves-light blue darken-3" href="/login">Login</a>
+        <a class="btn waves-effect waves-light blue darken-3" href="/login">Admin</a>
       </div>
     </div>
 
